Fixing gallery sizing on mobile
mobile sizing of the gallery was off. made changes. Also adjusted some styling elements in the styles

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'SF Mono', 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', monospace, sans-serif;
 }
 
 html {
@@ -16,6 +15,7 @@ body {
   overflow: hidden;
   font-size: 22px;
   justify-content: center;
+  font-family: 'SF Mono', 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', monospace, sans-serif;
 }
 canvas {
   background: radial-gradient(ellipse at bottom, #0c1116 0%, #161927 100%);
@@ -1467,9 +1467,9 @@ button:hover {
 }
 
 /* Media Queries for Responsiveness */
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     .box {
-        width: 70vw; /* Adjusted to viewport width */
+        width: 64vw; /* Adjusted to viewport width */
         height: 18vh; /* Adjusted to viewport height */
     }
     .gallery {
@@ -1485,7 +1485,7 @@ button:hover {
         justify-content: center; 
     }
     .portfolio h1 {
-        font-size: 3rem;
+        font-size: 2.3rem;
         text-align: center;
 
     }
